@@ -16,10 +16,14 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>java.se,java.desktop</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
